--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the last couple of lessons, we talked about **understanding** our data by a discussion about graphing data and a metric for calculating distance between points.  Now we can move onto training a machine learning algorithm and using it to make predictions with data.  We'll do so with the **nearest neighbors** algorithm that we explored in the previous lab."
+    "In the last couple of lessons, we talked about **understanding** our data by a discussion about graphing data and a metric for calculating distance between points.  Now we can move onto training a machine learning algorithm and using it to make predictions with data.  We'll do so with the **nearest neighbors** algorithm that we asked you to build even though we haven't taught you about the tools you need in order to do\n",
+    "it yet in the previous lab. We're just mean that way\n"
    ]
   },
   {
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,20 +113,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
     "def distance(selected_individual, neighbor):\n",
-    "   distance_squared = (neighbor['x'] - selected_individual['x'])**2 + (neighbor['y'] - selected_individual['y'])**2\n",
-    "   return math.sqrt(distance_squared)"
+    "    distance_squared = (neighbor['x'] - selected_individual['x'])**2 + (neighbor['y'] - selected_individual['y'])**2\n",
+    "    return math.sqrt(distance_squared)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Suzie', 'x': 1, 'y': 11, 'distance': 4.242640687119285}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_between_neighbors(bob, suzie)"
    ]
@@ -169,13 +181,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Suzie', 'x': 1, 'y': 11, 'distance': 4.242640687119285},\n",
+       " {'name': 'Fred', 'x': 5, 'y': 8, 'distance': 1.0},\n",
+       " {'name': 'Edgar', 'x': 6, 'y': 13, 'distance': 5.385164807134504},\n",
+       " {'name': 'Steven', 'x': 3, 'y': 6, 'distance': 2.23606797749979},\n",
+       " {'name': 'Natalie', 'x': 5, 'y': 4, 'distance': 4.123105625617661}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    remaining_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
-    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), remaining_neighbors))"
+    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), remaining_neighbors))\n",
+    "distance_all(bob, neighbors)"
    ]
   },
   {
@@ -189,12 +217,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we write our `nearest_neighbors` function.  The function takes an optional argument of `number`, which represents the number of \"nearest\" neighbors to return.  When set to `None`, `number` is reassigned to equal the length of the `neighbors` list.  The `nearest_neighbors` function finishes by sorting the the \"neighbors\" by their distance and then slicing the list to return the correct number of neighbors.     "
+    "Finally, we write our `nearest_neighbors` function.  The function takes an optional argument of `number`, which represents the number of \"nearest\" neighbors to return.  When set to `None`, `number` is reassigned to equal the length of the `neighbors` list.  The `nearest_neighbors` function finishes by sorting the \"neighbors\" by their distance and then slicing the list to return the correct number of neighbors.     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,20 +235,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fred', 'x': 5, 'y': 8, 'distance': 1.0},\n",
+       " {'name': 'Steven', 'x': 3, 'y': 6, 'distance': 2.23606797749979},\n",
+       " {'name': 'Natalie', 'x': 5, 'y': 4, 'distance': 4.123105625617661},\n",
+       " {'name': 'Suzie', 'x': 1, 'y': 11, 'distance': 4.242640687119285},\n",
+       " {'name': 'Edgar', 'x': 6, 'y': 13, 'distance': 5.385164807134504}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nearest_neighbors(bob, neighbors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fred', 'x': 5, 'y': 8, 'distance': 1.0},\n",
+       " {'name': 'Steven', 'x': 3, 'y': 6, 'distance': 2.23606797749979},\n",
+       " {'name': 'Natalie', 'x': 5, 'y': 4, 'distance': 4.123105625617661}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "nearest_neighbors(bob, neighbors, 2)"
+    "nearest_neighbors(bob, neighbors, 3)"
    ]
   },
   {
@@ -229,7 +285,7 @@
    "source": [
     "Python's `sorted` method lets us sort a list of dictionaries by a certain value. We do so by telling the `sorted` method to compare the values specified in the `lambda` function, in this case `neighbor['distance']`.\n",
     "\n",
-    "We have seen how to access elements from a list by explicitly providing the starting element and stopping element in the following manner: `sorted_neighbors[0:number]`. Above, we implicitly select the first *number* of elements from our list by leaving out the starting element."
+    "We have seen how to access elements from a list by explicitly providing the starting element and stopping element in the following manner: `sorted_neighbors[:number]`. Above, we implicitly select the first *number* of elements from our list by leaving out the starting element."
    ]
   },
   {
@@ -243,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this lesson, we reviewed the nearest neighbors function and saw how it derives from calculating the distance using the Pythagorean Theorem to then sorting neighbors by that interest.  \n",
+    "In this lesson, we reviewed the nearest neighbors function and saw how it derives from calculating the distance using the Pythagorean Theorem to then sorting neighbors by that interest. We really should have taught you this before asking you to build it, but hey, we're just vindictive\n",
     "\n"
    ]
   }
